<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HostOrLocalFragment"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_play_locally_offline"
        android:text="@string/play_locally_offline"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_locally_offline_description"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/btn_host_server"
        android:text="@string/host_server"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/host_server_description"/>
</LinearLayout>